--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,12 +25,16 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen 8080 http2;
+        listen 8888 http2;
 
         access_log  /var/log/nginx/access.log  main;
 
         location /greeter.Greeter {
             grpc_pass grpc://grpcservers;
+        }
+
+        location /greeter3.Greeter3 {
+            grpc_pass grpc://127.0.0.1:50053;
         }
     }
 
